--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@
                 width="264"
                 class="img-team"
               />
-              <h3 class="card-title">Mark Guerrero</h3>
-              <p class="about-text">Product Designer</p>
+              <div class="team-blok">
+                <h3 class="card-title">Mark Guerrero</h3>
+                <p class="about-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -163,8 +165,10 @@
                 width="264"
                 class="img-team"
               />
-              <h3 class="card-title">Tom Ford</h3>
-              <p class="about-text">Frontend Developer</p>
+              <div class="team-blok">
+                <h3 class="card-title">Tom Ford</h3>
+                <p class="about-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -173,8 +177,10 @@
                 width="264"
                 class="img-team"
               />
-              <h3 class="card-title">Camila Garcia</h3>
-              <p class="about-text">Marketing</p>
+              <div class="team-blok">
+                <h3 class="card-title">Camila Garcia</h3>
+                <p class="about-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -183,8 +189,10 @@
                 width="264"
                 class="img-team"
               />
-              <h3 class="card-title">Daniel Wilson</h3>
-              <p class="about-text">UI Designer</p>
+              <div class="team-blok">
+                <h3 class="card-title">Daniel Wilson</h3>
+                <p class="about-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -193,14 +201,16 @@
 
     <!--Footer-->
     <footer class="footer">
-      <div class="page-footer">
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-stud">Studio</span></a
-        >
-        <p class="foot-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="contaner">
+        <div class="page-footer">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-stud">Studio</span></a
+          >
+          <p class="foot-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
