--- a/portfolio.html
+++ b/portfolio.html
@@ -59,141 +59,161 @@
 
     <!--Section projects-->
 
-    <main class="section port-section">
-      <section class="contaner">
-        <h1 class="section-title transparent">Our work</h1>
-        <!--Заховати за допомогою css-->
-        <div class="port-buttons">
-          <ul class="buttons-list list">
-            <li class="buttons-item">
-              <button type="button" class="button">All</button>
-            </li>
-            <li class="buttons-item">
-              <button type="button" class="button">Web Site</button>
-            </li>
-            <li class="buttons-item">
-              <button type="button" class="button">App</button>
-            </li>
-            <li class="buttons-item">
-              <button type="button" class="button">Design</button>
-            </li>
-            <li class="buttons-item">
-              <button type="button" class="button">Marketing</button>
-            </li>
-          </ul>
-        </div>
+    <main>
+      <section class="section port-section">
+        <div class="contaner">
+          <h1 class="section-title transparent">Our work</h1>
+          <!--Заховати за допомогою css-->
+          <div class="port-buttons">
+            <ul class="buttons-list list">
+              <li class="buttons-item">
+                <button type="button" class="button">All</button>
+              </li>
+              <li class="buttons-item">
+                <button type="button" class="button">Web Site</button>
+              </li>
+              <li class="buttons-item">
+                <button type="button" class="button">App</button>
+              </li>
+              <li class="buttons-item">
+                <button type="button" class="button">Design</button>
+              </li>
+              <li class="buttons-item">
+                <button type="button" class="button">Marketing</button>
+              </li>
+            </ul>
+          </div>
 
-        <div class="projects-blok">
-          <ul class="projects-list list">
-            <li class="projects-item">
-              <a href="" class="about-btn link">
-                <img
-                  src="./images/img-banking.jpg"
-                  alt="photo Banking App Interface Concept"
-                  width="360"
-                  class="img-projects"
-                />
-                <h2 class="works-title">Banking App Interface Concept</h2>
-                <p class="pro-text">App</p></a
-              >
-            </li>
-            <li class="projects-item">
-              <a href="" class="about-btn link">
-                <img
-                  src="./images/img-cashless.jpg"
-                  alt="photo application Concept of Cashless Payments"
-                  width="360"
-                  class="img-projects"
-                />
-                <h2 class="works-title">Cashless Payment</h2>
-                <p class="pro-text">Marketing</p></a
-              >
-            </li>
-            <li class="projects-item">
-              <a href="" class="about-btn link">
-                <img
-                  src="./images/img-meditation.jpg"
-                  alt="photo Meditation App"
-                  width="360"
-                  class="img-projects"
-                />
-                <h2 class="works-title">Meditation App</h2>
-                <p class="pro-text">App</p></a
-              >
-            </li>
-            <li class="projects-item">
-              <a href="" class="about-btn link">
-                <img
-                  src="./images/img-taxi.jpg"
-                  alt="photo App Taxi Service"
-                  width="360"
-                  class="img-projects"
-                />
-                <h2 class="works-title">Taxi Service</h2>
-                <p class="pro-text">Marketing</p></a
-              >
-            </li>
-            <li class="projects-item">
-              <a href="" class="about-btn link">
-                <img
-                  src="./images/img-screen.jpg"
-                  alt="smartphone screen illustration photo"
-                  width="360"
-                  class="img-projects"
-                />
-                <h2 class="works-title">Screen Illustrations</h2>
-                <p class="pro-text">Design</p></a
-              >
-            </li>
-            <li class="projects-item">
-              <a href="" class="about-btn link">
-                <img
-                  src="./images/img-online.jpg"
-                  alt="photo online course service"
-                  width="360"
-                  class="img-projects"
-                />
-                <h2 class="works-title">Online Courses</h2>
-                <p class="pro-text">Marketing</p></a
-              >
-            </li>
-            <li class="projects-item">
-              <a href="" class="about-btn link">
-                <img
-                  src="./images/img-insta.jpg"
-                  alt="photo application Instagram Stories Concept"
-                  width="360"
-                  class="img-projects"
-                />
-                <h2 class="works-title">Instagram Stories Concept</h2>
-                <p class="pro-text">Design</p></a
-              >
-            </li>
-            <li class="projects-item">
-              <a href="" class="about-btn link">
-                <img
-                  src="./images/img-organic.jpg"
-                  alt="photo website for Organic Food"
-                  width="360"
-                  class="img-projects"
-                />
-                <h2 class="works-title">Organic Food</h2>
-                <p class="pro-text">Web Site</p></a
-              >
-            </li>
-            <li class="projects-item">
-              <a href="" class="about-btn link">
-                <img
-                  src="./images/img-fresh.jpg"
-                  alt="photo website for  Fresh Coffee"
-                  width="360"
-                  class="img-projects"
-                />
-                <h2 class="works-title">Fresh Coffee</h2>
-                <p class="pro-text">Web Site</p></a
-              >
-            </li>
-          </ul>
+          <div class="projects-blok">
+            <ul class="projects-list list">
+              <li class="projects-item">
+                <a href="" class="about-btn link">
+                  <img
+                    src="./images/img-banking.jpg"
+                    alt="photo Banking App Interface Concept"
+                    width="360"
+                    class="img-projects"
+                  />
+                  <div class="project-work">
+                    <h2 class="works-title">Banking App Interface Concept</h2>
+                    <p class="pro-text">App</p>
+                  </div>
+                </a>
+              </li>
+              <li class="projects-item">
+                <a href="" class="about-btn link">
+                  <img
+                    src="./images/img-cashless.jpg"
+                    alt="photo application Concept of Cashless Payments"
+                    width="360"
+                    class="img-projects"
+                  />
+                  <div class="project-work">
+                    <h2 class="works-title">Cashless Payment</h2>
+                    <p class="pro-text">Marketing</p>
+                  </div>
+                </a>
+              </li>
+              <li class="projects-item">
+                <a href="" class="about-btn link">
+                  <img
+                    src="./images/img-meditation.jpg"
+                    alt="photo Meditation App"
+                    width="360"
+                    class="img-projects"
+                  />
+                  <div class="project-work">
+                    <h2 class="works-title">Meditation App</h2>
+                    <p class="pro-text">App</p>
+                  </div>
+                </a>
+              </li>
+              <li class="projects-item">
+                <a href="" class="about-btn link">
+                  <img
+                    src="./images/img-taxi.jpg"
+                    alt="photo App Taxi Service"
+                    width="360"
+                    class="img-projects"
+                  />
+                  <div class="project-work">
+                    <h2 class="works-title">Taxi Service</h2>
+                    <p class="pro-text">Marketing</p>
+                  </div>
+                </a>
+              </li>
+              <li class="projects-item">
+                <a href="" class="about-btn link">
+                  <img
+                    src="./images/img-screen.jpg"
+                    alt="smartphone screen illustration photo"
+                    width="360"
+                    class="img-projects"
+                  />
+                  <div class="project-work">
+                    <h2 class="works-title">Screen Illustrations</h2>
+                    <p class="pro-text">Design</p>
+                  </div>
+                </a>
+              </li>
+              <li class="projects-item">
+                <a href="" class="about-btn link">
+                  <img
+                    src="./images/img-online.jpg"
+                    alt="photo online course service"
+                    width="360"
+                    class="img-projects"
+                  />
+                  <div class="project-work">
+                    <h2 class="works-title">Online Courses</h2>
+                    <p class="pro-text">Marketing</p>
+                  </div>
+                </a>
+              </li>
+              <li class="projects-item">
+                <a href="" class="about-btn link">
+                  <img
+                    src="./images/img-insta.jpg"
+                    alt="photo application Instagram Stories Concept"
+                    width="360"
+                    class="img-projects"
+                  />
+                  <div class="project-work">
+                    <h2 class="works-title">Instagram Stories Concept</h2>
+                    <p class="pro-text">Design</p>
+                  </div>
+                </a>
+              </li>
+              <li class="projects-item">
+                <a href="" class="about-btn link">
+                  <img
+                    src="./images/img-organic.jpg"
+                    alt="photo website for Organic Food"
+                    width="360"
+                    class="img-projects"
+                  />
+                  <div class="project-work">
+                    <h2 class="works-title">Organic Food</h2>
+                    <p class="pro-text">Web Site</p>
+                  </div>
+                </a>
+              </li>
+              <li class="projects-item">
+                <a href="" class="about-btn link">
+                  <img
+                    src="./images/img-fresh.jpg"
+                    alt="photo website for  Fresh Coffee"
+                    width="360"
+                    class="img-projects"
+                  />
+                  <div class="project-work">
+                    <h2 class="works-title">Fresh Coffee</h2>
+                    <p class="pro-text">Web Site</p>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
@@ -201,14 +221,16 @@
     <!--Footer-->
 
     <footer class="footer">
-      <div class="page-footer">
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-stud">Studio</span></a
-        >
-        <p class="foot-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="contaner">
+        <div class="page-footer">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-stud">Studio</span></a
+          >
+          <p class="foot-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
